--- a/PJG-front-end/src/app/play/play.component.html
+++ b/PJG-front-end/src/app/play/play.component.html
@@ -1,3 +1,12 @@
-<p>
-  Here will be the game interface !
-</p>
+<div class="basic-container">
+  <mat-grid-list cols="4" rowHeight="300px">
+    <mat-grid-tile
+      *ngFor="let tile of tiles"
+      [colspan]="tile.cols"
+      [rowspan]="tile.rows"
+      [style.background]="tile.color">
+      {{tile.text}}
+    </mat-grid-tile>
+  </mat-grid-list>
+</div>
+
