--- a/PJG-front-end/src/app/user-login/user-login.component.scss
+++ b/PJG-front-end/src/app/user-login/user-login.component.scss
@@ -1,9 +1,14 @@
-.basic-container {
- text-align: center;
+.center{
+  width: 80%;
+  max-width: 600px;
+  max-height: 500px;
+  margin: 10px auto;
 }
 
-.basic-container > * {
-  width: 100%;
+.basic-container {
+  text-align: center;
+  justify-content: center;
+  align-items: center;
 }
 
 .example-right-align {
@@ -19,7 +24,7 @@ input.example-right-align {
   -moz-appearance: textfield;
 }
 
-.login-card {
+.basic-card {
   max-width: 400px;
   margin: auto;
 }
