--- a/PJG-front-end/src/app/profile/profile-progression/profile-progression.component.html
+++ b/PJG-front-end/src/app/profile/profile-progression/profile-progression.component.html
@@ -1,3 +1,7 @@
-<p>
-  profile-progression works!
-</p>
+<mat-drawer-container class="example-container">
+  <mat-drawer mode="side" opened>
+    <app-sidebar></app-sidebar>
+  </mat-drawer>
+
+</mat-drawer-container>
+
