--- a/PJG-front-end/src/app/profile/profile.component.html
+++ b/PJG-front-end/src/app/profile/profile.component.html
@@ -5,7 +5,7 @@
   <mat-drawer-content>
     <h2>My profile :</h2>
     <p></p>
-    <h4>Username: {{user.username}}</h4>
-    <h4>Email: {{user.email}} </h4>
+    <h4>Username: {{user.user_name}}</h4>
+    <h4>Email: {{user.user_mail}} </h4>
   </mat-drawer-content>
 </mat-drawer-container>
