--- a/PJG-front-end/src/app/core/footer/footer.component.html
+++ b/PJG-front-end/src/app/core/footer/footer.component.html
@@ -2,7 +2,7 @@
   <div class="container">
     <span class="attribution">
       &copy; {{ today | date: 'yyyy' }}.
-      A learning platform from Pierre-Jean Berthelon and Guilaume Wallerich.
+      A learning platform from Pierre-Jean Berthelon and Guillaume Wallerich.
     </span>
   </div>
 </footer>
