--- a/PJG-front-end/src/app/core/sidebar/sidebar.component.html
+++ b/PJG-front-end/src/app/core/sidebar/sidebar.component.html
@@ -1,7 +1,7 @@
 
-   <button mat-button routerLinkActive="active" routerLink="/profile">My profile</button>
+   <button mat-button routerLinkActive="active" routerLink="/profile" class="mat-accent">My profile</button>
    <p></p>
-   <button mat-button routerLinkActive="active" routerLink="/profileEdit">Edit</button>
+   <button mat-button routerLinkActive="active" routerLink="/profile/edit" class="mat-accent">Edit</button>
    <p></p>
-   <button mat-button routerLinkActive="active" routerLink="/profileProgression">Progression</button>
+   <button mat-button routerLinkActive="active" routerLink="/profile/progression" class="mat-accent">Progression</button>
    <p></p>
