--- a/PJG-front-end/src/app/home/home.component.html
+++ b/PJG-front-end/src/app/home/home.component.html
@@ -1,1 +1,6 @@
-<div class="mat-display-4">Welcome into The PJG Project website !!!</div>
+<div class="basic">
+  <div class="mat-display-4">Welcome onto The PJG Project website !!!</div>
+  <p>To contact us:</p>
+  <p>Pierre-Jean Berthelon: pieber-8@student.ltu.se</p>
+  <p>Guillaume Wallerich: guiwal-8@student.ltu.se</p>
+</div>
