--- a/PJG-front-end/src/app/home/home.component.scss
+++ b/PJG-front-end/src/app/home/home.component.scss
@@ -3,4 +3,10 @@
   height: 200px;
   margin: 10px;
   border: 1px solid #555;
+
+}
+.basic{
+  background-color: rgba(63, 81, 181, .2);
+  height: 92%;
+  width: 100%;
 }
