--- a/PJG-front-end/src/app/play/game/game.component.scss
+++ b/PJG-front-end/src/app/play/game/game.component.scss
@@ -17,6 +17,7 @@
 
 .game-header > .logo{
   display: inline-block;
+  color: #f9a825;
   padding-lefet : 15px;
 }
 
@@ -26,7 +27,6 @@
   display: block;
   margin: auto;
   background-color : #47565A;
-  box-shadow: 0 19px 38px rgba(0, 0, 0, 0.30), 0 15px 12px rgba(0, 0, 0, 0.22);
   border-radius: 5px;
 }
 
