--- a/PJG-front-end/src/app/profile/profile-progression/profile-progression.component.html
+++ b/PJG-front-end/src/app/profile/profile-progression/profile-progression.component.html
@@ -1,7 +1,16 @@
-<mat-drawer-container class="example-container">
-  <mat-drawer mode="side" opened>
+<div class="font">
+<mat-drawer-container class="sidenav">
+  <mat-drawer mode="side" opened class="sidenav-font">
     <app-sidebar></app-sidebar>
   </mat-drawer>
-
+  <mat-drawer-content class="drawer-content">
+      <h2>My progression</h2>
+    <p> </p>
+    <p> </p>
+    <br>
+    <p> </p>
+    <p>Will be implemented in another version...</p>
+    <br>
+  </mat-drawer-content>
 </mat-drawer-container>
-
+</div>
