--- a/PJG-front-end/src/app/core/footer/footer.component.scss
+++ b/PJG-front-end/src/app/core/footer/footer.component.scss
@@ -1,3 +1,10 @@
-.attribution {
-  justify-content: center;
+.container{
+  text-align: center;
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  padding: 1rem;
+  background-color: #efefef;
+  text-align: center;
 }
