--- a/PJG-front-end/src/app/core/header/header.component.scss
+++ b/PJG-front-end/src/app/core/header/header.component.scss
@@ -1,14 +1,11 @@
 .toolbar {
   width: 100%;
-  color: antiquewhite;
 
 }
-
-.example-icon {
-  padding: 0 14px;
+.buttons {
+  background-color: yellow;
 }
-
-.example-spacer {
+.spacer {
   flex: 1 1 auto;
 }
 .active {
