--- a/PJG-front-end/src/app/play/drag-drop/drag-drop.component.html
+++ b/PJG-front-end/src/app/play/drag-drop/drag-drop.component.html
@@ -1,29 +1,31 @@
 <div class="example-container">
-  <h2>To do</h2>
+  <h2>Possible Actions</h2>
 
   <div
     cdkDropList
     #todoList="cdkDropList"
-    [cdkDropListData]="todo"
+    [cdkDropListData]="possibleActions"
     [cdkDropListConnectedTo]="[doneList]"
     class="example-list"
     (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let item of todo" cdkDrag>{{item}}</div>
+    <div class="example-box" *ngFor="let item of possibleActions"
+         cdkDrag>{{item}}</div>
   </div>
 </div>
 
 <div class="example-container">
-  <h2>Done</h2>
-
+  <h2>Main()</h2>
+  <h2> &#123; </h2>
   <div
     cdkDropList
     #doneList="cdkDropList"
-    [cdkDropListData]="done"
+    [cdkDropListData]="instructionQueue"
     [cdkDropListConnectedTo]="[todoList]"
     class="example-list"
     (cdkDropListDropped)="drop($event)">
-    <div class="example-box" *ngFor="let item of done" cdkDrag>{{item}}</div>
+    <div class="example-box" *ngFor="let item of instructionQueue" cdkDrag>{{item}}</div>
   </div>
+  <h2> &#125; </h2>
 </div>
 
 
