--- a/PJG-front-end/src/app/play/drag-drop/drag-drop.component.scss
+++ b/PJG-front-end/src/app/play/drag-drop/drag-drop.component.scss
@@ -3,13 +3,15 @@
   max-width: 100%;
   margin: 0 25px 25px 0;
   display: inline-block;
+  text-align: left;
   vertical-align: top;
+  color: #f9a825;
 }
 
 .example-list {
   border: solid 1px #ccc;
   min-height: 60px;
-  background: white;
+  background-color: rgba(63, 81, 181, .2);
   border-radius: 4px;
   overflow: hidden;
   display: block;
@@ -18,14 +20,14 @@
 .example-box {
   padding: 20px 10px;
   border-bottom: solid 1px #ccc;
-  color: rgba(0, 0, 0, 0.87);
+  background-color: #3f51b5;
+  color: #f9a825;
   display: flex;
   flex-direction: row;
   align-items: center;
   justify-content: space-between;
   box-sizing: border-box;
   cursor: move;
-  background: white;
   font-size: 14px;
 }
 
