--- a/PJG-front-end/src/app/profile/profile.component.html
+++ b/PJG-front-end/src/app/profile/profile.component.html
@@ -1,17 +1,18 @@
-<mat-drawer-container class="example-container">
-  <mat-drawer mode="side" opened>
-    <app-sidebar></app-sidebar>
-  </mat-drawer>
-  <mat-drawer-content>
-    <h2>My profile :</h2>
-    <p></p>
-    <h4>Username: {{user.username}}</h4>
-    <h4>Email: {{user.email}} </h4>
-  </mat-drawer-content>
-</mat-drawer-container>
-
-
-
+<div class="font">
+  <mat-drawer-container class="sidenav" >
+    <mat-drawer mode="side" opened class="sidenav-font">
+      <app-sidebar></app-sidebar>
+    </mat-drawer>
+    <mat-drawer-content class="drawer-content">
+      <h2 >My profile :</h2>
+      <p></p>
+      <br>
+      <br>
+      <h4>Username:</h4> <p> {{ user.user_name }} </p>
+      <h4>Email:</h4> <p> {{ user.user_mail }} </p>
+    </mat-drawer-content>
+  </mat-drawer-container>
+</div>
 
 
 
