--- a/PJG-front-end/src/app/user-new/user-new.component.html
+++ b/PJG-front-end/src/app/user-new/user-new.component.html
@@ -10,7 +10,11 @@
     </mat-form-field>
     <p></p>
     <mat-form-field>
-      <input matInput placeholder="Enter your password" id = 'password' [type]="hide ? 'password' : 'text'" formControlName="password" required>
+      <input matInput placeholder="Enter your password"
+                      id='password'
+                      [type]="hide ? 'password' : 'text'"
+                      pattern="(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9])(?=.*[$@$!%*?&])[A-Za-z\d$@$!%*?&].{8,}"
+                      formControlName="password" required>
       <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </mat-form-field>
     <p> </p>
@@ -22,12 +26,15 @@
       <mat-icon matSuffix (click)="hide = !hide">{{hide ? 'visibility_off' : 'visibility'}}</mat-icon>
     </mat-form-field>
     <p></p>
-    <mat-form-field>
-      <mat-select placeholder="desired difficulty" formControlName="modeControl" required>
-        <mat-option *ngFor="let mode of modes" [value]="mode">
-          {{mode.name}}
-        </mat-option>
-      </mat-select>
+      <mat-form-field>
+        <mat-select placeholder="Mode"
+                    [(value)]="selectedMode"
+                    formControlName="modeControl"
+                    required>
+          <mat-option *ngFor="let mode of modes" [value]="mode.value">
+            {{ mode.name }}
+          </mat-option>
+        </mat-select>
       <mat-hint>{{ getRules() }}</mat-hint>
     </mat-form-field>
     <p></p>
