--- a/PJG-front-end/src/app/core/header/header.component.html
+++ b/PJG-front-end/src/app/core/header/header.component.html
@@ -7,7 +7,7 @@
       <span class="spacer"></span>
 
       <button mat-button routerLink="/auth" color="accent" routerLinkActive="active" *ngIf="!isAuth" >Login/Register</button>
-      <button mat-button routerLink="/profile" color="accent" routerLinkActive="active" >Profile</button>
+      <button mat-button routerLink="/profile" color="accent" routerLinkActive="active"*ngIf="isAuth" >Profile</button>
       <button mat-button routerLink="/home" color="accent" routerLinkActive="active" *ngIf="isAuth" (click)="logout()">log out</button>
   </mat-toolbar-row>
 </mat-toolbar>
