added game with objective + file upload

--- a/PJG-front-end/src/app/profile/edit-profile/edit-profile.component.html
+++ b/PJG-front-end/src/app/profile/edit-profile/edit-profile.component.html
@@ -5,6 +5,7 @@
   </mat-drawer>
   <mat-drawer-content class="drawer-content">
     <div class="basic-container">
+      <app-profile-picture></app-profile-picture>
       <form class="form-horizontal" [formGroup]="userForm">
         <mat-form-field>
           <input matInput placeholder="Enter your email"
