--- a/PJG-front-end/src/app/profile/profile.component.html
+++ b/PJG-front-end/src/app/profile/profile.component.html
@@ -5,8 +5,8 @@
     </mat-drawer>
     <mat-drawer-content class="drawer-content">
       <h2 >My profile :</h2>
+      <p>{{ user.user_pic }}</p>
       <p></p>
-      <br>
       <br>
       <h4>Username:</h4> <p> {{ user.user_name }} </p>
       <h4>Email:</h4> <p> {{ user.user_mail }} </p>
